@@ -7,6 +7,7 @@
 package vavi.apps.jwinzip;
 
 import java.awt.BorderLayout;
+import java.awt.Dimension;
 import java.awt.Font;
 import java.awt.Toolkit;
 import java.awt.event.ActionEvent;
@@ -15,18 +16,18 @@ import java.awt.event.MouseEvent;
 import java.io.BufferedInputStream;
 import java.io.BufferedOutputStream;
 import java.io.File;
-import java.io.FileInputStream;
 import java.io.FileNotFoundException;
-import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
-import java.util.Enumeration;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.nio.file.StandardOpenOption;
+import java.nio.file.attribute.FileTime;
 import java.util.Locale;
-import java.util.NoSuchElementException;
 import java.util.Properties;
 import java.util.ResourceBundle;
-
 import javax.swing.AbstractAction;
 import javax.swing.Action;
 import javax.swing.ImageIcon;
@@ -48,13 +49,13 @@ import javax.swing.UIManager;
 import javax.swing.event.MouseInputAdapter;
 import javax.swing.event.MouseInputListener;
 
+import vavi.swing.binding.table.Row;
+import vavi.swing.binding.table.TableModel;
 import vavi.util.Debug;
 import vavi.util.RegexFileFilter;
-import vavi.util.StringUtil;
 import vavi.util.archive.Archive;
+import vavi.util.archive.Archives;
 import vavi.util.archive.Entry;
-import vavi.util.archive.spi.ArchiveSpi;
-import vavi.util.archive.spi.InputStreamSpi;
 
 
 /**
@@ -72,8 +73,6 @@ public class JWinZip {
     /** */
     private static final ResourceBundle rb = ResourceBundle.getBundle("JWinZipResources", Locale.getDefault());
 
-    // -------------------------------------------------------------------------
-
     /** */
     private Archive archive;
 
@@ -81,14 +80,13 @@ public class JWinZip {
      * @param entry archive entry
      * @param file file to output
      */
-    private void extract(Entry entry, File file) throws IOException {
-        try (
-            InputStream is = new BufferedInputStream(archive.getInputStream(entry));
-            OutputStream os = new BufferedOutputStream(new FileOutputStream(file));
-        ) {
+    private void extract(Entry entry, Path file) throws IOException {
+        try (InputStream is = new BufferedInputStream(archive.getInputStream(entry));
+             OutputStream os = new BufferedOutputStream(Files.newOutputStream(file))) {
+
             long size = entry.getSize();
             final int SIZE = 8192;
-            byte buf[] = new byte[SIZE];
+            byte[] buf = new byte[SIZE];
             while (size > 0) {
                 int l = is.read(buf, 0, SIZE);
                 if (l == -1) {
@@ -98,99 +96,9 @@ public class JWinZip {
                 size -= l;
             }
             os.close();
-            file.setLastModified(entry.getTime());
+            Files.setLastModifiedTime(file, FileTime.fromMillis(entry.getTime()));
         }
     }
-
-    /** */
-    private InputStream getInputStream(File file) throws IOException {
-        InputStream is = new BufferedInputStream(new FileInputStream(file));
-
-        for (int i = 0; i < inputStreamSpis.length; i++) {
-            Debug.println("inputStreamSpi: " + StringUtil.getClassName(inputStreamSpis[i].getClass()));
-            if (inputStreamSpis[i].canExpandInput(is)) {
-                InputStream inputStream = inputStreamSpis[i].createInputStreamInstance();
-                Debug.println("inputStream: " + inputStream.getClass());
-                return inputStream;
-            }
-        }
-
-        Debug.println("default stream");
-        return new FileInputStream(file);
-    }
-
-    /**
-     * @throws NoSuchElementException
-     */
-    private void setArchive(File file) throws IOException {
-        InputStream is = new BufferedInputStream(getInputStream(file));
-        for (int i = 0; i < archiveSpis.length; i++) {
-            Debug.println("archiveSpi: " + archiveSpis[i]);
-            boolean canExtract = false;
-
-            try {
-                canExtract = archiveSpis[i].canExtractInput(file);
-            } catch (IllegalArgumentException e) {
-                Debug.println(e);
-                canExtract = archiveSpis[i].canExtractInput(is);
-            }
-            if (canExtract) {
-                try {
-                    archive = archiveSpis[i].createArchiveInstance(file);
-                } catch (IllegalArgumentException e) {
-                    Debug.println(e);
-                    archive = archiveSpis[i].createArchiveInstance(is);
-                }
-                Debug.println("archive: " + archive.getClass());
-                return;
-            }
-        }
-
-        is.close();
-        throw new NoSuchElementException(file + " is not supported type");
-    }
-
-    /** */
-    private static ArchiveSpi[] archiveSpis;
-
-    /** */
-    private static InputStreamSpi[] inputStreamSpis;
-
-    /** */
-    static {
-        final String path1 = "/META-INF/services/vavi.util.archive.spi.ArchiveSpi";
-        final String path2 = "/META-INF/services/vavi.util.archive.spi.InputStreamSpi";
-
-        try {
-            Properties props = new Properties();
-
-            props.load(JWinZip.class.getResourceAsStream(path1));
-            props.list(System.err);
-            archiveSpis = new ArchiveSpi[props.size()];
-            Enumeration<?> e = props.propertyNames();
-            int i = 0;
-            while (e.hasMoreElements()) {
-                String className = (String) e.nextElement();
-                archiveSpis[i++] = (ArchiveSpi) Class.forName(className).newInstance();
-            }
-
-            props.clear();
-            props.load(JWinZip.class.getResourceAsStream(path2));
-            props.list(System.err);
-            inputStreamSpis = new InputStreamSpi[props.size()];
-            e = props.propertyNames();
-            i = 0;
-            while (e.hasMoreElements()) {
-                String className = (String) e.nextElement();
-                inputStreamSpis[i++] = (InputStreamSpi) Class.forName(className).newInstance();
-            }
-        } catch (Exception e) {
-            Debug.printStackTrace(e);
-            System.exit(1);
-        }
-    }
-
-    // ----
 
     /** */
     private JTable table;
@@ -198,11 +106,14 @@ public class JWinZip {
     /** */
     private JPopupMenu popupMenu;
 
+    /** */
+    private JFrame frame;
+
     /**
-     * 
+     * GUI
      */
     private JWinZip(String[] args) throws IOException {
-        JFrame frame = new JFrame();
+        frame = new JFrame();
 
         popupMenu = getPopupMenu();
 
@@ -212,12 +123,13 @@ public class JWinZip {
         table.setFont(new Font(rb.getString("panel.jWinZip.font.name"), Font.PLAIN, 12));
         table.addMouseListener(mouseListener);
 
-        setArchive(new File(args[0]));
+        archive = Archives.getArchive(new File(args[0]));
 
-        table.setModel(new EntryTableModel(archive));
-        for (int i = 0; i < table.getModel().getColumnCount(); i++) {
-            table.getColumn(table.getModel().getColumnName(i)).setHeaderValue(EntryTableModel.columnName[i]);
-            table.getColumn(table.getModel().getColumnName(i)).setPreferredWidth(EntryTableModel.widths[i]);
+        TableModel<Entry> model = new TableModel<>(new ArchiveModel(archive));
+        table.setModel(model);
+        for (int i = 0; i < model.getColumnCount(); i++) {
+            table.getColumn(model.getColumnName(i)).setPreferredWidth(Row.Util.getWidth(ArchiveModel.ArchiveEntryModel.class, i));
+            table.getColumn(model.getColumnName(i)).setWidth(Row.Util.getWidth(ArchiveModel.ArchiveEntryModel.class, i));
         }
 
         JScrollPane sp = new JScrollPane(table);
@@ -226,18 +138,16 @@ public class JWinZip {
         frame.getContentPane().add(getToolBar(), BorderLayout.NORTH);
         frame.getContentPane().add(sp, BorderLayout.CENTER);
         frame.setDefaultCloseOperation(JFrame.EXIT_ON_CLOSE);
-        frame.setSize(640, 480);
+        frame.setPreferredSize(new Dimension(640, 480));
         frame.setTitle("JWinZip");
-        // frame.pack();
+        frame.pack();
         frame.setVisible(true);
 
         init();
     }
 
-    // ----
-
     /**
-     * メニューバーを取得します．
+     * Creates the menu bar．
      */
     public JMenuBar getMenuBar() {
         JMenuBar menuBar = new JMenuBar();
@@ -249,16 +159,19 @@ public class JWinZip {
 
         menuItem = menu.add(extractAction);
         menuItem.setMnemonic(KeyEvent.VK_X);
+        menu.add(menuItem);
         menu.addSeparator();
         menuItem = menu.add(exitAction);
         menuItem.setMnemonic(KeyEvent.VK_C);
+        menu.add(menuItem);
 
         menuBar.add(menu);
 
         // help
         menu = new JMenu(rb.getString("menu.help"));
         menuItem = menu.add(aboutAction);
-        menu.setMnemonic(KeyEvent.VK_A);
+        menuItem.setMnemonic(KeyEvent.VK_A);
+        menu.add(menuItem);
 
         menuBar.add(menu);
 
@@ -266,7 +179,7 @@ public class JWinZip {
     }
 
     /**
-     * ツールバーを取得します．
+     * Creates the tool bar．
      */
     public JToolBar getToolBar() {
         JToolBar toolBar = new JToolBar();
@@ -285,7 +198,7 @@ public class JWinZip {
     }
 
     /**
-     * ポップアップメニューを取得します．
+     * Creates the popup menu.．
      */
     public JPopupMenu getPopupMenu() {
         JPopupMenu popupMenu = new JPopupMenu();
@@ -296,40 +209,40 @@ public class JWinZip {
     }
 
     /** */
-    private void makeSureParentDirs(File file) {
-        File parent = file.getParentFile();
+    private void makeSureParentDirs(Path file) throws IOException {
+        Path parent = file.getParent();
 // Debug.println("file: " + file);
 // Debug.println("parent: " + parent.isDirectory() + ": " + parent.exists() + ": " + parent);
-        if (!parent.exists()) {
-            parent.mkdirs();
-            Debug.println("creadte dir: " + parent);
+        if (!Files.exists(parent)) {
+            Files.createDirectories(parent);
+Debug.println("create dir: " + parent);
         }
     }
 
     /**
-     * TODO 重複ファイルチェック
-     * TODO アクションは選択されたファイルのみ
+     * TODO duplication
+     * TODO action only for selected files
      */
-    private void extractAll(File dir) throws IOException {
+    private void extractAll(Path dir) throws IOException {
 
         Entry[] entries = archive.entries();
-        Debug.println("dir: " + dir);
-        for (int i = 0; i < entries.length; i++) {
+Debug.println("dir: " + dir);
+        for (Entry entry : entries) {
 
-            File file = new File(dir.getPath(), entries[i].getName());
+            Path file = dir.resolve(entry.getName());
 
-            if (entries[i].isDirectory()) {
-                if (!file.exists()) {
-                    file.mkdirs();
-                    Debug.println("create dir: " + file);
+            if (entry.isDirectory()) {
+                if (!Files.exists(file)) {
+                    Files.createDirectories(file);
+Debug.println("create dir: " + file);
                 }
             } else {
-                file = new File(dir.getPath(), entries[i].getName());
+                file = dir.resolve(entry.getName());
                 makeSureParentDirs(file);
 
                 try {
-                    extract(entries[i], file);
-                    System.err.println("Melting " + entries[i].getName() + " to " + file);
+                    extract(entry, file);
+                    System.err.println("Melting " + entry.getName() + " to " + file);
                 } catch (IOException e) {
                     System.err.println("Melting to " + file + " failed.");
                     // e.printStackTrace(System.err);
@@ -342,13 +255,13 @@ public class JWinZip {
     private void view() throws IOException {
         Entry entry = archive.entries()[table.getSelectedRow()];
 
-        File file = File.createTempFile("JWinZip", "tmp");
+        Path file = Files.createTempFile("JWinZip", "tmp");
         makeSureParentDirs(file);
 
         extract(entry, file);
         System.err.println("Temporary " + entry.getName() + " to " + file);
 
-        Runtime.getRuntime().exec("notepad " + file);
+        Runtime.getRuntime().exec(new String[] {"notepad", file.toString()});
     }
 
     /** */
@@ -359,14 +272,13 @@ public class JWinZip {
 
     /** */
     private void init() throws IOException {
-        Debug.println(APP_PROPS);
-        InputStream is = null;
+Debug.println(APP_PROPS);
+        InputStream is;
         try {
-            is = new FileInputStream(APP_PROPS);
+            is = Files.newInputStream(Paths.get(APP_PROPS));
         } catch (FileNotFoundException e) {
-            File file = new File(APP_PROPS);
-            file.createNewFile();
-            is = new FileInputStream(file);
+            Path file = Paths.get(APP_PROPS);
+            is = Files.newInputStream(file, StandardOpenOption.CREATE_NEW);
         }
         appProps.load(is);
         is.close();
@@ -374,7 +286,7 @@ public class JWinZip {
 
     /** */
     private void exit() throws IOException {
-        OutputStream os = new FileOutputStream(APP_PROPS);
+        OutputStream os = Files.newOutputStream(Paths.get(APP_PROPS));
         appProps.store(os, "JWinZip");
         os.close();
     }
@@ -387,7 +299,7 @@ public class JWinZip {
         private JFileChooser fc = new JFileChooser();
 
         void init() {
-            File cwd = null;
+            File cwd;
             if (appProps.getProperty("dir.extract") == null) {
                 cwd = new File(System.getProperty("user.home"));
             } else {
@@ -403,41 +315,41 @@ public class JWinZip {
                 if (fc.showOpenDialog(null) != JFileChooser.APPROVE_OPTION) {
                     return;
                 }
-                File dir = fc.getSelectedFile();
-                appProps.setProperty("dir.extract", dir.getPath());
+                Path dir = fc.getSelectedFile().toPath();
+                appProps.setProperty("dir.extract", dir.toString());
                 extractAll(dir);
             } catch (IOException e) {
-                Debug.printStackTrace(e);
+Debug.printStackTrace(e);
             }
         }
     };
 
-    /** */
+    /** "About" action */
     private Action aboutAction = new AbstractAction(rb.getString("action.about")) {
         public void actionPerformed(ActionEvent ev) {
             JOptionPane.showMessageDialog(null, "0.02", rb.getString("action.about"), JOptionPane.INFORMATION_MESSAGE);
         }
     };
 
-    /** */
+    /** "Exit" action */
     private Action exitAction = new AbstractAction(rb.getString("action.exit")) {
         public void actionPerformed(ActionEvent ev) {
             try {
                 exit();
             } catch (IOException e) {
-                Debug.printStackTrace(e);
+Debug.printStackTrace(e);
             }
-            System.exit(0);
+            frame.setVisible(false);
         }
     };
 
-    /** */
+    /** "View" action */
     private Action viewAction = new AbstractAction(rb.getString("action.view")) {
         public void actionPerformed(ActionEvent ev) {
             try {
                 view();
             } catch (IOException e) {
-                Debug.printStackTrace(e);
+Debug.printStackTrace(e);
             }
         }
     };
@@ -450,20 +362,16 @@ public class JWinZip {
                     int x = ev.getX();
                     int y = ev.getY();
                     popupMenu.show(table, x, y);
-                    Debug.println("row: " + table.getSelectedRow());
+Debug.println("row: " + table.getSelectedRow());
                 }
             }
         }
     };
 
-    // -------------------------------------------------------------------------
-
-    /** プロパティ */
+    /** */
     static Properties props = new Properties();
 
-    /**
-     * 初期化します．
-     */
+    /* */
     static {
         final String path = "/JWinZip.properties";
         final Class<?> clazz = JWinZip.class;
@@ -502,8 +410,6 @@ public class JWinZip {
 
     /** */
     private static RegexFileFilter fileFilter;
-
-    // -------------------------------------------------------------------------
 
     /**
      * The program entry point.
